@@ -1,5 +1,7 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.writefinaldecision.esa;
 
+import static java.util.Collections.emptyList;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -9,14 +11,12 @@ import static uk.gov.hmcts.reform.sscs.ccd.domain.YesNo.YES;
 
 import jakarta.validation.Validator;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import junitparams.JUnitParamsRunner;
+import java.util.List;
 import junitparams.Parameters;
 import junitparams.converters.Nullable;
 import org.junit.Test;
-import org.junit.runner.RunWith;
 import uk.gov.hmcts.reform.sscs.ccd.callback.PreSubmitCallbackResponse;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DynamicList;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.ccd.domain.YesNo;
 import uk.gov.hmcts.reform.sscs.ccd.presubmit.writefinaldecision.AwardType;
@@ -24,7 +24,6 @@ import uk.gov.hmcts.reform.sscs.ccd.presubmit.writefinaldecision.WriteFinalDecis
 import uk.gov.hmcts.reform.sscs.ccd.presubmit.writefinaldecision.WriteFinalDecisionMidEventValidationHandlerTestBase;
 import uk.gov.hmcts.reform.sscs.service.DecisionNoticeService;
 
-@RunWith(JUnitParamsRunner.class)
 public class EsaWriteFinalDecisionMidEventValidationHandlerTest extends WriteFinalDecisionMidEventValidationHandlerTestBase {
 
     @Override
@@ -36,7 +35,7 @@ public class EsaWriteFinalDecisionMidEventValidationHandlerTest extends WriteFin
     protected void setValidPointsAndActivitiesScenario(SscsCaseData caseData, String descriptorFlowValue) {
         sscsCaseData.getSscsEsaCaseData().setDoesRegulation29Apply(YesNo.NO);
         sscsCaseData.getSscsEsaCaseData().setEsaWriteFinalDecisionPhysicalDisabilitiesQuestion(
-                Arrays.asList("mobilisingUnaided"));
+            List.of("mobilisingUnaided"));
 
         // < 15 points - correct for these fields
         sscsCaseData.getSscsEsaCaseData().setEsaWriteFinalDecisionMobilisingUnaidedQuestion("mobilisingUnaided1b");
@@ -54,8 +53,8 @@ public class EsaWriteFinalDecisionMidEventValidationHandlerTest extends WriteFin
 
     @Override
     protected void setEmptyActivitiesListScenario(SscsCaseData caseData) {
-        caseData.getSscsEsaCaseData().setEsaWriteFinalDecisionPhysicalDisabilitiesQuestion(Collections.emptyList());
-        caseData.getSscsEsaCaseData().setEsaWriteFinalDecisionMentalAssessmentQuestion(Collections.emptyList());
+        caseData.getSscsEsaCaseData().setEsaWriteFinalDecisionPhysicalDisabilitiesQuestion(emptyList());
+        caseData.getSscsEsaCaseData().setEsaWriteFinalDecisionMentalAssessmentQuestion(emptyList());
     }
 
     @Override
@@ -84,7 +83,7 @@ public class EsaWriteFinalDecisionMidEventValidationHandlerTest extends WriteFin
         when(caseDetails.getCaseData()).thenReturn(sscsCaseData);
 
         sscsCaseData.getSscsEsaCaseData().setEsaWriteFinalDecisionSchedule3ActivitiesApply("Yes");
-        sscsCaseData.getSscsEsaCaseData().setEsaWriteFinalDecisionSchedule3ActivitiesQuestion(Arrays.asList("schedule3MobilisingUnaided"));
+        sscsCaseData.getSscsEsaCaseData().setEsaWriteFinalDecisionSchedule3ActivitiesQuestion(List.of("schedule3MobilisingUnaided"));
 
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(MID_EVENT, callback, USER_AUTHORISATION);
 
@@ -140,7 +139,7 @@ public class EsaWriteFinalDecisionMidEventValidationHandlerTest extends WriteFin
         "null, NO"
     })
     public void givenEsaCaseWithWcaAppealFlow_thenSetShowSummaryOfOutcomePage(
-            @Nullable YesNo wcaFlow, YesNo expectedShowResult) {
+        @Nullable YesNo wcaFlow, YesNo expectedShowResult) {
 
         sscsCaseData.setWcaAppeal(wcaFlow);
 
@@ -176,7 +175,7 @@ public class EsaWriteFinalDecisionMidEventValidationHandlerTest extends WriteFin
         "null, null, NO",
     })
     public void givenEsaCaseWithWcaAppealFlowAndAllowedFlow_thenSetShowDwpReassessAwardPage(
-            @Nullable YesNo wcaFlow, @Nullable String allowedFlow, YesNo expectedShowResult) {
+        @Nullable YesNo wcaFlow, @Nullable String allowedFlow, YesNo expectedShowResult) {
 
         sscsCaseData.getSscsFinalDecisionCaseData().setWriteFinalDecisionGenerateNotice(YES);
         sscsCaseData.setWcaAppeal(wcaFlow);
@@ -285,6 +284,24 @@ public class EsaWriteFinalDecisionMidEventValidationHandlerTest extends WriteFin
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(MID_EVENT, callback, USER_AUTHORISATION);
 
         assertEquals(showWorkCapabilityPage, response.getData().getShowWorkCapabilityAssessmentPage());
+    }
+
+    @Test
+    public void shouldApplyDefaultValuesToEsaRegulationsApplyIfNotAlreadyPopulated() {
+        when(caseDetails.getCaseData()).thenReturn(sscsCaseData);
+        PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(MID_EVENT, callback, USER_AUTHORISATION);
+        assertThat(response.getData().getSscsEsaCaseData().getWhichEsaRegulationsApply()).isNotNull();
+    }
+
+    @Test
+    public void shouldNotApplyDefaultValuesToEsaRegulationsApplyIfAlreadyPopulated() {
+        sscsCaseData.getSscsEsaCaseData().setWhichEsaRegulationsApply(new DynamicList(null, emptyList()));
+        when(caseDetails.getCaseData()).thenReturn(sscsCaseData);
+
+        PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(MID_EVENT, callback, USER_AUTHORISATION);
+
+        assertThat(response.getData().getSscsEsaCaseData().getWhichEsaRegulationsApply()).isNotNull();
+        assertThat(response.getData().getSscsEsaCaseData().getWhichEsaRegulationsApply().getListItems()).isEmpty();
     }
 
 }
